// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`deploy-to-aks - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Use when deploying a web application or API to an existing Azure Kubernetes Service cluster. Detects framework, generates Dockerfile and Kubernetes manifests, validates against AKS Deployment Safeguards, and deploys with verification. WHEN: deploy to AKS, deploy app to Kubernetes, containerize for AKS, deploy to existing AKS cluster, generate K8s manifests for Azure, set up CI/CD for AKS, migrate app to AKS, deploy container to Azure, I have a Django/Express/Spring Boot app and want to run it on AKS, my AKS deployment is failing safeguard checks.",
  "extractedKeywords": [
    "against",
    "aks",
    "application",
    "authentication",
    "azure",
    "boot",
    "checks",
    "cli",
    "cluster",
    "container",
    "containerize",
    "deploy",
    "deploying",
    "deployment",
    "deploys",
    "detects",
    "diagnostic",
    "django",
    "dockerfile",
    "existing",
    "express",
    "failing",
    "framework",
    "generate",
    "generates",
    "have",
    "identity",
    "kubernetes",
    "manifests",
    "mcp",
    "migrate",
    "networking",
    "rbac",
    "safeguard",
    "safeguards",
    "security",
    "service",
    "spring",
    "validates",
    "validation",
    "verification",
    "want",
    "when",
    "with",
  ],
  "name": "deploy-to-aks",
}
`;

exports[`deploy-to-aks - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "against",
  "aks",
  "application",
  "authentication",
  "azure",
  "boot",
  "checks",
  "cli",
  "cluster",
  "container",
  "containerize",
  "deploy",
  "deploying",
  "deployment",
  "deploys",
  "detects",
  "diagnostic",
  "django",
  "dockerfile",
  "existing",
  "express",
  "failing",
  "framework",
  "generate",
  "generates",
  "have",
  "identity",
  "kubernetes",
  "manifests",
  "mcp",
  "migrate",
  "networking",
  "rbac",
  "safeguard",
  "safeguards",
  "security",
  "service",
  "spring",
  "validates",
  "validation",
  "verification",
  "want",
  "when",
  "with",
]
`;
